basic theme structure, wip

--- a/config/ubuntu.ini
+++ b/config/ubuntu.ini
@@ -1,5 +1,5 @@
 [table]
-DARK_BLACK      =  48,10, 36
+DARK_BLACK      =  48,10,36
 DARK_BLUE       =  52,101,164
 DARK_GREEN      =  78,154,6
 DARK_CYAN       =  6,152,154
